# Files

./: .editorconfig  .gitattributes  .gitignore  13猫唐三大佬  3.patch  @@.html  @V2.ipa  AGENTS.md  Acrylic.xaml  AddItem.xaml  AddItem.xaml.cs  App.xaml  App.xaml.cs  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COPYING  ClassicMode.xaml  ClassicMode.xaml.cs  Contributing.md  Directory.Build.props  Directory.Build.targets  Directory.Packages.props  FAQ.md  FStringWhiteListVerifiedUserld  FileLoader.cs  Files.csproj  Files.sln  Files.slnx  FilesUWP.code-workspace  GenericFileBrowser.xaml  GenericFileBrowser.xaml.cs  History.txt  Iron Claw Auto & Junk Removal  ItemInteractions.cs  LICENSE  LocationsList.cs  MainPage.xaml  MainPage.xaml.cs  NOTICE.md  (+30 more)
.claude/: settings.local.json
.devbots/: needs-review.yml  needs-triage.yml
.devcontainer/: devcontainer.json
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  NOTICE.md  PRIVACY.md  PULL_REQUEST_TEMPLATE.md  README.md  copilot-instructions.md  dependabot.yml  issue_label_bot.yaml  pull_request_template.md
BackgroundTasks/: BackgroundTasks.csproj  UpdateTask.cs
Common/: CloudProvider.cs  CloudProviders.cs  Common.csproj  CompatibilityOptions.cs  ContextMenu.cs  DeviceEvent.cs  Extensions.cs  FileTagsDb.cs  ILogWriter.cs  IconFileInfo.cs  Logger.cs  ShellFileItem.cs  (+4 more)
src/search-service/: .gitignore  Cargo.toml  build.rs  rust-toolchain.toml
src/search-service/src/: enumerate.rs  index.rs  lib.rs  main.rs  throttle.rs  watcher.rs
src/search-service/tests/: enumerate.rs  search_smoke.rs  throttle.rs  watcher.rs
(+7680 files in other folders)
